:bug: Fix high cpu usage by one tab :bug: Fix tab's close button background on small tab's width

--- a/src/style/constants.scss
+++ b/src/style/constants.scss
@@ -12,6 +12,7 @@
     --tab-hovered-background: #161e32;
     --tab-progressbar-color: #deeaf8;
     --tab-progressbar-background: #050a19;
+    --tab-action-button-background: var(--tab-focused-background);
 
     --toast-background: #192033;
 
